--- a/app/views/layouts/ucsdlib.html.erb
+++ b/app/views/layouts/ucsdlib.html.erb
@@ -4,7 +4,7 @@
 		<%= render :partial => 'layouts/head_common' %>
 		<link href="<%= opensearch_catalog_path(:format => 'xml', :only_path => false) %>" title="<%= application_name%>" type="application/opensearchdescription+xml" rel="search"/>
 
-	  <script src="//libraries.ucsd.edu/jwplayer-6.8/jwplayer.js"></script>
+	  <script src="//libraries.ucsd.edu/jwplayer/jwplayer.js"></script>
 	  <script src="//libraries.ucsd.edu/jwplayer/key.js"></script>
 
 		<%= render :partial => 'layouts/googleanalytics' if Rails.env.production? || Rails.env.staging? %>
