Moving background image out of assets to work with Rails 4.0 (non-digested assets no longer supported)

--- a/app/assets/stylesheets/custom-overrides.css.scss
+++ b/app/assets/stylesheets/custom-overrides.css.scss
@@ -26,7 +26,7 @@ footer address,footer p{margin:0;}
 ul.inline > li{padding-left:0;padding-right:0;}
 
 /* UCSD GOODNESS */
-.ucsd-head{background:url("ucsd/bg.jpg") repeat 0 0;border-bottom:#e8f3ff solid 1px;}
+.ucsd-head{background:url("../images/bg.jpg") repeat 0 0;border-bottom:#e8f3ff solid 1px;}
 .ucsd-head-logo{padding:20px 0;}
 .ucsd-head .brand{color:#fff;display:block;float:left;font-size:24px;margin:32px 0 0 0;padding:0;text-transform:uppercase;}
 
