Moving glyphicons to images dir

--- a/app/assets/stylesheets/blacklight.scss.erb
+++ b/app/assets/stylesheets/blacklight.scss.erb
@@ -23,8 +23,8 @@ $btnInverseBackground:              #E67A00;
 $btnInverseBackgroundHighlight:     darken($btnInverseBackground, 15%) !default;
 
 // Overrides
-$iconSpritePath:      image-path("glyphicons-halflings.png");
-$iconWhiteSpritePath: image-path("glyphicons-halflings-white.png");
+$iconSpritePath:      image-path("../images/glyphicons-halflings.png");
+$iconWhiteSpritePath: image-path("../images/glyphicons-halflings-white.png");
 
 //---
 // @imports
