Adding dynamic form control for Relationship to OtherRights create/edit form. DHH-325

--- a/app/views/mads_authority/show.html.erb
+++ b/app/views/mads_authority/show.html.erb
@@ -1,6 +1,6 @@
 <% name = render_document_show_field_value(:document=>@document, :field=>"name_tesim") %>
 <% code = render_document_show_field_value(:document=>@document, :field=>"code_tesim") %>
-<% scheme_id = render_document_show_field_value(:document=>@document, :field=>"scheme_id_tesim") %>
+<% scheme_id = render_document_show_field_value(:document=>@document, :field=>"scheme_tesim") %>
 <% scheme_name = render_document_show_field_value(:document=>@document, :field=>"scheme_name_tesim") %>
 <% record_id = render_document_show_field_value(:document=>@document, :field=>"id_t") %>
 
