--- a/app/views/dams_other_rights/new.html.erb
+++ b/app/views/dams_other_rights/new.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
 <h1>Create a new DAMS OtherRights</h1>
-<%= form_for @dams_other_right do |f| %>
+<%= form_for @dams_other_right, :html => { :onsubmit => 'processForm_generic("#dams_other_right_");'}  do |f| %>
   <%= label_tag 'dams_other_right[note]', "Note" %><%= text_field_tag 'dams_other_right[note]' %>
   <%= label_tag 'dams_other_right[uri]', "URI" %><%= url_field_tag 'dams_other_right[uri]' %>
   <%= f.fields_for :permission_node do |pn| %>
@@ -19,10 +19,10 @@
     <%= rn.label :endDate, "Restriction End Date" %>
     <%= rn.text_field :endDate, :value => ""%>    
   <% end %>   
-  <h3>Relationship</h3>
-  <%= select_tag 'dams_other_right[role][]', options_for_select(@mads_authorities) , :prompt=>"Select Relationship Role", required: true %>
-  <br>   
-  <%= select_tag 'dams_other_right[name][]', options_for_select(@mads_names) , :prompt=>"Select Relationship Name", required: true %>    
-  <br>
+
+  <%#= select_tag 'dams_other_right[role][]', options_for_select(@mads_authorities) , :prompt=>"Select Relationship Role", required: true %>
+  <%#= select_tag 'dams_other_right[name][]', options_for_select(@mads_names) , :prompt=>"Select Relationship Name", required: true %>    
+
+  <%= render :partial => 'shared/edit_fields/relationship_form' , :locals => {:f => f, :object_type => "dams_other_right"}%>
   <%=f.submit "Save", class: "btn btn-primary" %>
 <%end%>
