--- a/app/views/dams_units/index.html.erb
+++ b/app/views/dams_units/index.html.erb
@@ -1,7 +1,7 @@
 <section id="home-01">
   <%=image_tag '/assets/home-page/logo-dc.png', :alt => 'Digital Collections', :id => 'dc-logo' %>
 	<section class="tagline">
-		<p>Currently totaling <%= @count_resp.total_count %> images, audio recordings, videos, documents, &amp;&nbsp;data&nbsp;sets</p>
+		<p><span class="home-text">Currently totaling <%= @count_resp.total_count %> images, audio recordings, videos, documents, &amp;&nbsp;data&nbsp;sets</span></p>
 	</section>
   <%= form_tag catalog_index_url, :method => :get, :class => '', :id => 'dc-search-box' do %>
 		<fieldset>
