--- a/app/views/dams_other_rights/edit.html.erb
+++ b/app/views/dams_other_rights/edit.html.erb
@@ -3,9 +3,13 @@
 <%= form_for @dams_other_right , :html => { :onsubmit => 'processForm_generic("#dams_other_right_");'} do |f| %>
   <%= label_tag 'dams_other_right[note]', "Note" %><%= text_field_tag 'dams_other_right[note][]', @dams_other_right.note[0] %>
   <%= label_tag 'dams_other_right[uri]', "URI" %><%= text_field_tag 'dams_other_right[uri][]', @dams_other_right.uri[0] %>
-  <%#= @dams_other_right.relationship.first.loadRole.name %>
-  <%#= @dams_other_right.relationship.first.load.name %>
-  aaaa<%= @dams_other_right.permissionType[0]%>
+  <%= label_tag 'dams_other_right[permissionType]', "Permission Type" %><%= text_field_tag 'dams_other_right[permissionType][]', @dams_other_right.permissionType[0] %>
+  <%= label_tag 'dams_other_right[permissionBeginDate]', "Permission Begin Date" %><%= text_field_tag 'dams_other_right[permissionBeginDate][]', @dams_other_right.permissionBeginDate[0] %>
+  <%= label_tag 'dams_other_right[permissionEndDate]', "Permission End Date" %><%= text_field_tag 'dams_other_right[permissionEndDate][]', @dams_other_right.permissionEndDate[0] %>
+  <%= label_tag 'dams_other_right[restrictionType]', "Restriction Type" %><%= text_field_tag 'dams_other_right[restrictionType][]', @dams_other_right.restrictionType[0] %>
+  <%= label_tag 'dams_other_right[restrictionBeginDate]', "Restriction Begin Date" %><%= text_field_tag 'dams_other_right[restrictionBeginDate][]', @dams_other_right.restrictionBeginDate[0] %>
+  <%= label_tag 'dams_other_right[restrictionEndDate]', "Restriction End Date" %><%= text_field_tag 'dams_other_right[restrictionEndDate][]', @dams_other_right.restrictionEndDate[0] %>
+                
   <%#= f.fields_for :permission_node do |pn| %>
     <%#= pn.label :type, "Permission Type" %>
     <%#= pn.text_field :type , :value => @dams_other_right.permissionType[0]%>    
