Updating the spec for DamsOtherRights. DHH-325

--- a/app/views/dams_other_rights/edit.html.erb
+++ b/app/views/dams_other_rights/edit.html.erb
@@ -1,34 +1,23 @@
 <%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
 <h1>Edit DAMS OtherRights</h1>
 <%= form_for @dams_other_right , :html => { :onsubmit => 'processForm_generic("#dams_other_right_");'} do |f| %>
-  <%= label_tag 'dams_other_right[note]', "Note" %><%= text_field_tag 'dams_other_right[note][]', @dams_other_right.note[0] %>
-  <%= label_tag 'dams_other_right[uri]', "URI" %><%= text_field_tag 'dams_other_right[uri][]', @dams_other_right.uri[0] %>
-  <%= label_tag 'dams_other_right[permissionType]', "Permission Type" %><%= text_field_tag 'dams_other_right[permissionType][]', @dams_other_right.permissionType[0] %>
-  <%= label_tag 'dams_other_right[permissionBeginDate]', "Permission Begin Date" %><%= text_field_tag 'dams_other_right[permissionBeginDate][]', @dams_other_right.permissionBeginDate[0] %>
-  <%= label_tag 'dams_other_right[permissionEndDate]', "Permission End Date" %><%= text_field_tag 'dams_other_right[permissionEndDate][]', @dams_other_right.permissionEndDate[0] %>
-  <%= label_tag 'dams_other_right[restrictionType]', "Restriction Type" %><%= text_field_tag 'dams_other_right[restrictionType][]', @dams_other_right.restrictionType[0] %>
-  <%= label_tag 'dams_other_right[restrictionBeginDate]', "Restriction Begin Date" %><%= text_field_tag 'dams_other_right[restrictionBeginDate][]', @dams_other_right.restrictionBeginDate[0] %>
-  <%= label_tag 'dams_other_right[restrictionEndDate]', "Restriction End Date" %><%= text_field_tag 'dams_other_right[restrictionEndDate][]', @dams_other_right.restrictionEndDate[0] %>
-                
-  <%#= f.fields_for :permission_node do |pn| %>
-    <%#= pn.label :type, "Permission Type" %>
-    <%#= pn.text_field :type , :value => @dams_other_right.permissionType[0]%>    
-    <%#= pn.label :beginDate, "Permission Begin Date" %>
-    <%#= pn.text_field :beginDate, :value => @dams_other_right.permissionBeginDate[0]%>
-    <%#= pn.label :endDate, "Permission End Date" %>
-    <%#= pn.text_field :endDate, :value => @dams_other_right.permissionEndDate[0]%>    
-  <%# end %> 
+  <%= label_tag 'dams_other_right[note]', "Note" %>
+  <%= text_field_tag 'dams_other_right[note][]', @dams_other_right.note[0], class: "input-block-level" %>
+  <%= label_tag 'dams_other_right[uri]', "URI" %>
+  <%= text_field_tag 'dams_other_right[uri][]', @dams_other_right.uri[0], class: "input-block-level"  %>
+  <%= label_tag 'dams_other_right[permissionType]', "Permission Type" %>
+  <%= text_field_tag 'dams_other_right[permissionType][]', @dams_other_right.permissionType[0], class: "input-block-level"  %>
+  <%= label_tag 'dams_other_right[permissionBeginDate]', "Permission Begin Date" %>
+  <%= text_field_tag 'dams_other_right[permissionBeginDate][]', @dams_other_right.permissionBeginDate[0], class: "input-block-level"  %>
+  <%= label_tag 'dams_other_right[permissionEndDate]', "Permission End Date" %>
+  <%= text_field_tag 'dams_other_right[permissionEndDate][]', @dams_other_right.permissionEndDate[0], class: "input-block-level"  %>
+  <%= label_tag 'dams_other_right[restrictionType]', "Restriction Type" %>
+  <%= text_field_tag 'dams_other_right[restrictionType][]', @dams_other_right.restrictionType[0], class: "input-block-level"  %>
+  <%= label_tag 'dams_other_right[restrictionBeginDate]', "Restriction Begin Date" %>
+  <%= text_field_tag 'dams_other_right[restrictionBeginDate][]', @dams_other_right.restrictionBeginDate[0], class: "input-block-level"  %>
+  <%= label_tag 'dams_other_right[restrictionEndDate]', "Restriction End Date" %>
+  <%= text_field_tag 'dams_other_right[restrictionEndDate][]', @dams_other_right.restrictionEndDate[0], class: "input-block-level"  %>
 
-  <%#= f.fields_for :restriction_node do |rn| %>
-    <%#= rn.label :type, "Restriction Type" %>
-    <%#= rn.text_field :type , :value => @dams_other_right.restrictionType[0]%>    
-    <%#= rn.label :beginDate, "Restriction Begin Date" %>
-    <%#= rn.text_field :beginDate, :value => @dams_other_right.restrictionBeginDate[0]%>
-    <%#= rn.label :endDate, "Restriction End Date" %>
-    <%#= rn.text_field :endDate, :value => @dams_other_right.restrictionEndDate[0]%>    
-  <%# end %>  
-  <%#= select_tag 'dams_other_right[role][]', options_for_select(@mads_authorities, :selected => @role_id) , :prompt=>"Select Relationship Role", required: true %>   
-  <%#= select_tag 'dams_other_right[name][]', options_for_select(@mads_names, :selected => @name_id) , :prompt=>"Select Relationship Name", required: true %>
 
   <%= render :partial => 'shared/edit_fields/relationship_edit_form' , :locals => {:object => @dams_other_right, :object_type => "dams_other_right", :f => f}%>
   
