Updated for metadata toggle text.(DHH-353)

--- a/app/views/shared/fields/_show.html.erb
+++ b/app/views/shared/fields/_show.html.erb
@@ -1,4 +1,4 @@
-<button class="btn btn-mini btn-link btn-block" type="button" data-toggle="collapse" data-target="#metadata-fold"><strong>Hide metadata</strong></button>
+<button class="btn btn-mini btn-link btn-block" type="button" data-toggle="collapse" data-target="#metadata-fold"><strong>Hide details</strong></button>
 <section id="metadata-fold" class="collapse in">
   <dl>
     <%= render :partial => 'shared/fields/show_raw' %>
