--- a/app/assets/stylesheets/custom-object-viewer.css.scss
+++ b/app/assets/stylesheets/custom-object-viewer.css.scss
@@ -178,3 +178,5 @@ $complexFile: #AC6F2B !default;
 //----------------------------------------------------------
 
 .fields {/*background-color:$objectBG;*/padding: 0 $viewerPadding 0 $viewerPadding;border: 1px solid #d9d9d9;border-bottom: 1px solid #d9d9d9;margin-bottom: 20px;}
+.nonSort {width:17%}
+.mainTitle {width:80%}
