--- a/app/views/shared/edit_fields/_title_form.html.erb
+++ b/app/views/shared/edit_fields/_title_form.html.erb
@@ -1,13 +1,19 @@
  <h3>Title</h3> 
   <%= f.fields_for :title do |t| %>
+    <%= t.fields_for :nonSortElement do |nonSort| %>
+      <%= nonSort.label :elementValue, "NonSort" %>
+      <%= nonSort.text_field :elementValue, class: "nonSort"%>
+    <% end %>
+     
     <%= t.fields_for :mainTitleElement do |main| %>
-      <%= main.label :elementValue, "MainTitle" %>
-      <%= main.text_field :elementValue, required: true, class: "input-block-level"   %>
-    <% end %>    
+      <%= main.text_field :elementValue, required: true, class: "mainTitle"   %>
+    <% end %>
+        
     <%= t.fields_for :subTitleElement do |sub| %>
       <%= sub.label :elementValue, "SubTitle" %>
       <%= sub.text_field :elementValue, class: "input-block-level"  %>
     <% end %>
+
     <%= t.fields_for :partNameElement do |pName| %>
       <%= pName.label :elementValue, "PartName" %>
       <%= pName.text_field :elementValue, class: "input-block-level"  %>
@@ -16,10 +22,7 @@
       <%= pNum.label :elementValue, "PartNumber" %>
       <%= pNum.text_field :elementValue, class: "input-block-level"  %>
     <% end %>
-    <%= t.fields_for :nonSortElement do |nonSort| %>
-      <%= nonSort.label :elementValue, "NonSort" %>
-      <%= nonSort.text_field :elementValue, class: "input-block-level"  %>
-    <% end %>
+
     <%= t.fields_for :hasVariant do |var| %>
       <%= var.label :variantLabel, "Variant" %>
       <%= var.text_field :variantLabel, :value => "", class: "input-block-level"  %>
