Adding 'Restricted' image object viewer.(DHH-310)

--- a/app/assets/stylesheets/custom-object-viewer.css.scss
+++ b/app/assets/stylesheets/custom-object-viewer.css.scss
@@ -101,6 +101,10 @@ $complexFile: #AC6F2B !default;
 .culturally-sensitive-thumbnail {border:2px solid #659EC7; width:100px; height:150px;}
 #sensitive-object {background: none repeat scroll 0 0 #FFFAEE; display: inline-block;font-size: 12px;height: 390px;padding: 15px;width: 390px;vertical-align: middle;padding-top: 50px}
 
+// restricted object Content
+.restricted-obj-thumbnail {border:2px solid #659EC7; width:100px; height:150px;}
+#restricted-object {background: none repeat scroll 0 0 #FFFAEE; display: inline-block;font-size: 12px;height: 390px;padding: 15px;width: 390px;vertical-align: middle;padding-top: 50px}
+
 // Sidebar
 .sidebar-header{border-bottom:1px solid #ddd;padding-bottom:5px;margin:10px 0}
 
