--- a/app/views/dams_objects/metadata.html.erb
+++ b/app/views/dams_objects/metadata.html.erb
@@ -1,4 +1,14 @@
 <% @page_title =  "#{grabTitle}" %>
+
+<% 
+restrictedObjText = getRestrictedObjText(@document["otherRights_tesim"])
+if !restrictedObjText.nil?
+  restrictedObjText= "We are sorry, but the image you have selected is not currently available for download or viewing." +restrictedObjText
+end
+restricted_icon_path="ucsd/dc_not_available.jpg"
+  %>
+
+
 <div class="row-fluid">
   <div class="span12">
     <%= render :partial => 'prev_next' %>
@@ -12,6 +22,18 @@
     <div class="row-fluid">
       <section class="dams-viewer span12">
         <%= render :partial => 'shared/fields/title' %>
+       
+       <!-- Restricted object viewer --> 
+        <% if !restrictedObjText.nil? %>
+          <div class="simple-object" align="center">
+            <div id="restricted-object">
+              <%= image_tag(restricted_icon_path, :class => 'restricted-obj-thumbnail', :alt => '', :id =>"restricted-image" ) %>
+              <br><%= "#{restrictedObjText} "%>
+         
+           </div>
+         </div>
+       <%end%>
+
       </section>
     </div>
 
