--- a/app/views/dams_objects/_simple_object_viewer.html.erb
+++ b/app/views/dams_objects/_simple_object_viewer.html.erb
@@ -8,8 +8,10 @@
 		<% when 'video-service' %>
 			<%= render :partial => 'video_viewer', :locals => {:filePath => service_file_path, :icon => display_file_path} %>
 		<% when 'document-service' %>
-			<%= render :partial => 'metadata_data_file', :locals => {:fileName => service_file} %>
-			<%= render :partial => 'data_viewer', :locals => {:filePath => service_file_path, :objectType => 'simple'} %>
+			<% if display_file_path.to_s == ''%> 
+				<%= render :partial => 'metadata_data_file', :locals => {:fileName => service_file} %>
+			<% end %>
+			<%= render :partial => 'data_viewer', :locals => {:displayFilePath => display_file_path, :filePath => service_file_path, :objectType => 'simple', :pdfFilePath => pdf_file_path} %>
 		<% when 'data-service' %>
 			<%= render :partial => 'metadata_data_file', :locals => {:fileName => service_file} %>
 			<%= render :partial => 'data_viewer', :locals => {:filePath => service_file_path, :objectType => 'simple'} %>
