Removing static content, updating links to point to page views instead (DHH-343)

--- a/app/views/contact_form/new.html.erb
+++ b/app/views/contact_form/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Contact Us!</h1>
 <div class="alert">
   Please use the contact form to submit general questions about the Digital Collections website, to report a problem you are experiencing with the system, or to provide feedback. See our  
-  <%= link_to 'Frequently Asked Questions (FAQ)', faq_path %> for additional information.
+  <%= link_to 'Frequently Asked Questions (FAQ)', view_page_path('faq') %> for additional information.
 </div>
 
 
