--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -6,7 +6,7 @@
         <%#link_to t('blacklight.search.start_over'), url_for(:action=>'index'), :class => "catalog_startOverLink", :id=>"startOverLink" %>
 
         <%= render_constraints(params) %>
-        See also <%= link_to 'Search Tips', search_tips_path(:anchor => 'searching-tips') %>
+        See also <%= link_to 'Search Tips', view_page_path('search_tips') %>
 
         <%= render :partial => 'did_you_mean' %>
 
