--- a/app/views/dams_objects/_show_damstools.html.erb
+++ b/app/views/dams_objects/_show_damstools.html.erb
@@ -1,8 +1,8 @@
 <!--<p>Export to: -->
 
-<%#= link_to 'Zotero', zotero_path, {:id => 'zoteroLink', :name => 'zotero', :class => 'btn btn-mini btn-primary'} %>
+<%#= link_to 'Zotero', view_page_path('zotero'), {:id => 'zoteroLink', :name => 'zotero', :class => 'btn btn-mini btn-primary'} %>
       
-<%#= link_to 'Mendeley', mendeley_path, {:id => 'mendeleyLink', :name => 'mendeley', :class => 'btn btn-mini btn-primary'} %>
+<%#= link_to 'Mendeley', view_page_path('mendeley'), {:id => 'mendeleyLink', :name => 'mendeley', :class => 'btn btn-mini btn-primary'} %>
 
 
  <!-- COinS hook for openurl -->
