--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
 
         <ul class="nav">
           <li class="visible-desktop"><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'About', about_path %></li>
+          <li><%= link_to 'About', view_page_path('about') %></li>
           <!-- Link to general browse by collection, format and topic page -->
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse By <b class="caret"></b></a>
@@ -33,9 +33,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'Contact', contact_path %></li>
-              <li><%= link_to 'FAQ', faq_path %></li>
-              <li><%= link_to 'Search Tips', search_tips_path%></li>
-              <li><%= link_to 'Take Down Policy', takedown_path %></li>
+              <li><%= link_to 'FAQ', view_page_path('faq') %></li>
+              <li><%= link_to 'Search Tips', view_page_path('search_tips')%></li>
+              <li><%= link_to 'Take Down Policy', view_page_path('takedown') %></li>
             </ul>
           </li>
 
