--- a/app/views/dams_other_rights/edit.html.erb
+++ b/app/views/dams_other_rights/edit.html.erb
@@ -1,6 +1,8 @@
 <%= javascript_tag "var baseURL = '#{url_for( :controller => 'get_data', :only_path => false )}';" %>
 <h1>Edit DAMS OtherRights</h1>
 <%= form_for @dams_other_right , :html => { :onsubmit => 'processForm_generic("#dams_other_right_");'} do |f| %>
+  <%= label_tag 'dams_other_right[basis]', "Basis" %>
+  <%= text_field_tag 'dams_other_right[basis][]', @dams_other_right.basis[0], class: "input-block-level" %>
   <%= label_tag 'dams_other_right[note]', "Note" %>
   <%= text_field_tag 'dams_other_right[note][]', @dams_other_right.note[0], class: "input-block-level" %>
   <%= label_tag 'dams_other_right[uri]', "URI" %>
