Wrapping all requests in anonymous user session, removing user logic from other controllers (DHH-350)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -63,8 +63,7 @@
                 <img src="https://a4.ucsd.edu/tritON/imagebug">
               </ul>
             </li>
-          <% elsif current_user %>
-
+          <% elsif current_user && current_user.provider != 'anonymous'  %>
             <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
           <% else %>
             <li><%= link_to 'Sign In', new_user_session_path %></li>
