--- a/app/assets/stylesheets/home-page.css
+++ b/app/assets/stylesheets/home-page.css
@@ -6,7 +6,7 @@
 #home-02,#home-02 a{color:#fff;}
 #home-02 h2{margin:0;font-family:"Archivo Narrow";font-weight: normal;;font-size:2em;color:rgba(255,255,255,0.75);line-height:normal;width:80%;margin:0 auto;}
 #home-02 h3{margin:20px;font-weight: normal;font-size:1.9em;line-height:normal;}
-.home-text{font-size:20px}
+/*.home-text{font-size:20px} */
 #dc-logo{display:block;margin: 0 auto;padding-top:100px;}
 #dc-search-box{padding-top:0px;margin:0;}
 #dc-search-box fieldset{display:block;width:80%;padding:0;margin:0 auto;border:5px solid #fff;background-color:#fff;box-shadow: 0 0 10px rgba(0,0,0,0.5);position:relative;}
@@ -25,7 +25,7 @@
 .browse-by-list li:last-child:before{content:" or "}
 .browse-by-list li:last-child:after{content:""}
 #bg-meta{position:absolute;bottom:0;left:0;padding:20px;color:#fff;color:rgba(255,255,255,0.75);}
-#bg-meta p{margin:0;text-shadow: 1px 2px 3px rgba(0,0,0,0.5);font-size:18px;line-height:normal;}
+#bg-meta p{margin:0;text-shadow: 1px 2px 3px rgba(0,0,0,0.5);font-size:0.9em;line-height:normal;}
 #bg-meta a{color:#fff;color:rgba(255,255,255,0.75);text-decoration:underline;transition: all 250ms ease-in-out;outline:none;}
 #bg-meta a:hover{color:#fff;}
 .category{display:inline-block;width:48%;vertical-align: top;}
