--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,10 +57,11 @@
 	                <li><%= link_to 'Create Assembled Collection', new_dams_assembled_collection_path %></li>
                 <% end %>
                 <%# link_to 'Create Administrative Unit', new_dams_unit_path %>
-                  <li class="divider"></li>
-                  <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
-                <!-- use an image bug to keep the Shibboleth session alive -->
-                <img src="https://a4.ucsd.edu/tritON/imagebug">
+                <li class="divider">
+                  <!-- use an image bug to keep the Shibboleth session alive -->
+                  <img src="https://a4.ucsd.edu/tritON/imagebug">
+                </li>
+                <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
               </ul>
             </li>
           <% elsif current_user && current_user.provider != 'anonymous'  %>
