--- a/app/views/dams_collections/show.html.erb
+++ b/app/views/dams_collections/show.html.erb
@@ -1,5 +1,5 @@
 <%
-	@collection_title = render_document_show_field_value(:document=>@document, :field=>'title_tesim')
+	@collection_title = @document['title_tesim'].first
 	@collection_type = render_document_show_field_value(:document=>@document, :field =>'has_model_ssim')
 	@collection_type =  @collection_type.gsub("info:fedora/afmodel:", '').gsub(/(?<=[a-z])(?=[A-Z])/, '_').downcase
 	@edit = "edit_" + "#{@collection_type}_path"
