Changing the text for the new entry. DHH-383

--- a/app/views/shared/edit_fields/_view_form_hidden_fields.html.erb
+++ b/app/views/shared/edit_fields/_view_form_hidden_fields.html.erb
@@ -7,8 +7,8 @@
 <br>
 
 <% if(!parent_id.nil?) %>
-  <a href="#" onClick="javascript: setParentId_generic('<%= parent_id%>',true);">close</a>
+  <a href="#" onClick="javascript: setParentId_generic('<%= parent_id%>',true);">Submit</a>
 <% end %>
 <% if(!parent_class.nil?) %>
-  <a href="#" onClick="javascript: setParentId_generic('<%= parent_class%>',false);">close</a>
+  <a href="#" onClick="javascript: setParentId_generic('<%= parent_class%>',false);">Submit</a>
 <% end %> 
