Adding filter mapping for suggestion enginee. (DHH-376)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,6 @@
  *= require custom-collections
  *= require custom-search
  *= require custom-advanced-search
+ *= require custom-edit
  *= require leaflet
 */
