--- a/app/views/advanced/_advanced_search_form.html.erb
+++ b/app/views/advanced/_advanced_search_form.html.erb
@@ -27,7 +27,7 @@
 	  <%= hidden_field_tag(:search_field, blacklight_config.advanced_search[:url_key]) %>
   </fieldset>
 
-  <div class="form-actions dams-download-button">
+  <div class="form-actions adv-search-button">
 
     <button type="submit" class="btn btn-inverse pull-right">
       <i class="icon-search icon-white"></i>
