Another minor UI tweak. (DHH-374)

--- a/app/assets/stylesheets/custom-object-viewer.css.scss
+++ b/app/assets/stylesheets/custom-object-viewer.css.scss
@@ -99,7 +99,7 @@ $complexFile: #AC6F2B !default;
 
 // Document Viewer
 .file-thumbnail{width:25%;height:auto;margin:0 auto;}
-
+.file-thumbnail img{margin-bottom: 20px;}
 
 // Culturally Sensitive Content
 .culturally-sensitive-thumbnail {border:2px solid #659EC7; width:100px; height:150px;}
