--- a/app/views/shared/edit_fields/_note_fields.html.erb
+++ b/app/views/shared/edit_fields/_note_fields.html.erb
@@ -1,10 +1,18 @@
-<div class="fields">       
-	<%= f.label :type, "Note" %>
-    <%= f.text_field :value , :value => "", class: "input-block-level" %>    
-    <%= f.label :type, "Note Type" %>
-    <%= f.text_field :type, :value => "", class: "input-block-level" %>
-    <%= f.label :displayLabel, "Note Display label" %>
-    <%= f.text_field :displayLabel, :value => "", class: "input-block-level" %>
-    <br/>
-    <%= link_to_remove_fields "Remove Note", f %>
+<%
+   noteTypeArray = [["arrangement", "arrangement"],["bibliography", "bibliography"],["biography", "biography"],["classification", "classification"],
+   						["credits", "credits"],["custodial history", "custodial history"],["description", "description"],["digitalOrigin", "digitalOrigin"],
+   						["extent", "extent"],["identifier", "identifier"],["inscription", "inscription"],["local attribution", "local attribution"],
+   						["location of originals", "location of originals"],["material details", "material details"],["note", "note"],["physical description", "physical description"],
+   						["performers", "performers"],["preferred citation", "preferred citation"],["publication", "publication"],["scope and content", "scope and content"],
+   						["series", "series"],["statement of responsibility", "statement of responsibility"],["tableOfContents", "tableOfContents"],
+   						["technical requirements", "technical requirements"],["thesis", "thesis"],["venue", "venue"]]
+%> 
+<div class="fields">
+  <%= f.select :type, options_for_select(noteTypeArray) , {:include_blank => 'Select Type'}, :class=>"input-drop-down"%>          
+  <%= f.label :type, "Note" %>
+  <%= f.text_field :value , :value => "", class: "input-block-level" %>    
+  <%= f.label :displayLabel, "Note Display label" %>
+  <%= f.text_field :displayLabel, :value => "", class: "input-block-level" %>
+  <br/>
+  <%= link_to_remove_fields "Remove Note", f %>
 </div>
