--- a/app/views/shared/edit_fields/_notes_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_notes_edit_form.html.erb
@@ -7,15 +7,23 @@
 	concat htmlHeader.html_safe
 	note = object.send(type)
 	i = 0
+    noteTypeArray = [["arrangement", "arrangement"],["bibliography", "bibliography"],["biography", "biography"],["classification", "classification"],
+   						["credits", "credits"],["custodial history", "custodial history"],["description", "description"],["digitalOrigin", "digitalOrigin"],
+   						["extent", "extent"],["identifier", "identifier"],["inscription", "inscription"],["local attribution", "local attribution"],
+   						["location of originals", "location of originals"],["material details", "material details"],["note", "note"],["physical description", "physical description"],
+   						["performers", "performers"],["preferred citation", "preferred citation"],["publication", "publication"],["scope and content", "scope and content"],
+   						["series", "series"],["statement of responsibility", "statement of responsibility"],["tableOfContents", "tableOfContents"],
+   						["technical requirements", "technical requirements"],["thesis", "thesis"],["venue", "venue"]]	
 	if note != nil
 		while i < note.size  do
 			
 %>			
 			<div class="fields">
+				<%= select_tag "#{object_type}[#{type}_attributes][#{i}][type]", options_for_select(noteTypeArray, :selected => note[i].type) , :prompt=>"Select Type", :class=>"input-drop-down"%>								
 				<%= label_tag "#{object_type}[#{type}_attributes][#{i}][value]", noteType %>
 				<%= text_field_tag "#{object_type}[#{type}_attributes][#{i}][value]", note[i].value, class: "input-block-level" %>
-				<%= label_tag "#{object_type}[#{type}_attributes][#{i}][type]", noteType + " Type" %>
-				<%= text_field_tag "#{object_type}[#{type}_attributes][#{i}][type]", note[i].type, class: "input-block-level" %>
+				<%#= label_tag "#{object_type}[#{type}_attributes][#{i}][type]", noteType + " Type" %>
+				<%#= text_field_tag "#{object_type}[#{type}_attributes][#{i}][type]", note[i].type, class: "input-block-level" %>
 				<%= label_tag "#{object_type}[#{type}_attributes][#{i}][displayLabel]", noteType + " Displaylabel" %>
 				<%= text_field_tag "#{object_type}[#{type}_attributes][#{i}][displayLabel]", note[i].displayLabel, class: "input-block-level" %>
 				<br/>
@@ -28,10 +36,11 @@
 		if note.size == 0
 %>
 			<div class="fields">
+				<%= select_tag "#{object_type}[#{type}_attributes][#{i}][type]", options_for_select(noteTypeArray) , :prompt=>"Select Type", :class=>"input-drop-down"%>			
 				<%= label_tag "#{object_type}[#{type}_attributes][#{i}][value]", noteType %>
 				<%= text_field_tag "#{object_type}[#{type}_attributes][#{i}][value]", "", class: "input-block-level" %>
-				<%= label_tag "#{object_type}[#{type}_attributes][#{i}][type]", noteType + " Type" %>
-				<%= text_field_tag "#{object_type}[#{type}_attributes][#{i}][type]", "", class: "input-block-level" %>
+				<%#= label_tag "#{object_type}[#{type}_attributes][#{i}][type]", noteType + " Type" %>
+				<%#= text_field_tag "#{object_type}[#{type}_attributes][#{i}][type]", "", class: "input-block-level" %>
 				<%= label_tag "#{object_type}[#{type}_attributes][#{i}][displayLabel]", noteType + " Displaylabel" %>
 				<%= text_field_tag "#{object_type}[#{type}_attributes][#{i}][displayLabel]", "", class: "input-block-level" %>
 				<br/>
