Displaying 'Description' note metadata first on Collection pages (DHH-367)

--- a/app/views/dams_collections/show.html.erb
+++ b/app/views/dams_collections/show.html.erb
@@ -49,7 +49,7 @@
 	<div class="span8">
 		<h3>About this collection</h3>
 		<dl>
-		  <%= render :partial => 'shared/fields/show_raw' %>
+		  <%= render :partial => 'shared/fields/show_raw', :locals => {:greetingsFromCollectionsView => 'Wish you were here!'} %>
 		</dl>
 	</div>
 
