--- a/app/views/contact_form/new.html.erb
+++ b/app/views/contact_form/new.html.erb
@@ -4,7 +4,13 @@
   <%= link_to 'Frequently Asked Questions (FAQ)', view_page_path('faq') %> for additional information.
 </div>
 
-
+<% if user_signed_in? %>
+  <% nm = current_user.uid %>
+  <% em = current_user.email %>
+<% else %>
+  <% nm = '' %>
+  <% em = '' %>
+<% end %>
 
 <%= form_for @contact_form, url: {action: "create"}, :html => {:class => 'form-horizontal well'} do |f| %>
   <%= f.text_field :contact_method, :class => 'hide' %>
@@ -18,13 +24,13 @@
 
   <div class="control-group">
     <%= f.label :name, 'Your Name', :class=>"control-label" %>
-    <div class="controls"><%= f.text_field :name, :class=>"input-xlarge", :value =>"", :required => true %>  </div>
+    <div class="controls"><%= f.text_field :name, :class=>"input-xlarge", :value => nm, :required => true %>  </div>
   </div>
 
   <div class="control-group">
     <%= f.label :email, 'Your Email', :class=>"control-label" %>
     <div class="controls">
-    <%= f.text_field :email, :class=>"input-xlarge", :value =>"", :required => true %>
+    <%= f.text_field :email, :class=>"input-xlarge", :value => em, :required => true %>
     </div>
   </div>
 
