Adding metadata to audio, video and image components (DHH-374)

--- a/app/views/dams_objects/_metadata_component.html.erb
+++ b/app/views/dams_objects/_metadata_component.html.erb
@@ -49,9 +49,9 @@
 			<tbody>
 
 				<%# File data %>
-				<% if defined?(fileMetadata) %>
+				<% if defined?(fileMetadata) and defined?(fileName) %>
 					<% if fileMetadata == true %>
-						<%= render :partial => 'shared/fields/file_size', :locals => {:componentIndex => componentIndex, :fileName => fileName} %>
+						<%= render :partial => 'shared/fields/file_size', :locals => {:componentIndex => componentIndex} %>
 						<%= render :partial => 'shared/fields/file_format', :locals => {:componentIndex => componentIndex, :fileName => fileName} %>
 					<% end %>
 				<% end %>
