--- a/app/views/dams_objects/_complex_object_viewer.html.erb
+++ b/app/views/dams_objects/_complex_object_viewer.html.erb
@@ -27,24 +27,27 @@
 	       dataForDynamicLoad = "{\"file_type\":\"image\",\"display_file_path\":\"#{display_file_path}\",\"service_file_path\":\"#{zoom_file_path}\"}"
 	    %>
 			<div data='<%=dataForDynamicLoad%>'></div>
+	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i} %>
 
 	  <% elsif fileType == 'audio' %>
 
 	    <%= render :partial => 'audio_viewer_complex', :locals => {:componentIndex => i} %>
+	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i} %>
 
 	  <% elsif fileType == 'video' %>
 
 	    <%= render :partial => 'video_viewer_complex', :locals => {:componentIndex => i} %>
+	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i} %>
 
 	  <% elsif fileType == 'document' %>
 
 	    <%= render :partial => 'document_viewer', :locals => {:filePath => service_file_path, :displayFilePath => display_file_path} %>
-	    <%= render :partial => 'metadata_component', :locals => {:fileName => service_file, :componentIndex => i, :fileMetadata => true} %>
+	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i, :fileMetadata => true, :fileName => service_file} %>
 	    <%= render :partial => 'data_viewer', :locals => {:objectType => 'complex', :filePath => service_file_path} %>
 
 		<% elsif fileType == 'data' %>
 
-			<%= render :partial => 'metadata_component', :locals => {:fileName => service_file, :componentIndex => i, :fileMetadata => true} %>
+	    <%= render :partial => 'metadata_component', :locals => {:componentIndex => i, :fileMetadata => true, :fileName => service_file} %>
 			<%= render :partial => 'data_viewer', :locals => {:objectType => 'complex', :filePath => service_file_path} %>
 
 		<% else %>
