--- a/app/assets/stylesheets/custom-edit.css.scss
+++ b/app/assets/stylesheets/custom-edit.css.scss
@@ -3,7 +3,7 @@
   overflow-y: auto;
 }
 
-#multiple-datasets .league-name {
+#subjectField .subject-name {
   margin: 0 20px 5px 20px;
   padding: 3px 0;
   border-bottom: 1px solid #ccc;
