Removed max-width from home page container and added CSS for content > 1200px

--- a/app/assets/stylesheets/home-page.css
+++ b/app/assets/stylesheets/home-page.css
@@ -1,6 +1,6 @@
 #home-01,#home-02,#dc-search-box fieldset,#dc-search-box input[type=text],#dc-search-box input[type=submit],.category a{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
 #home-container{font-family:'Archivo Narrow',sans-serif !important;font-weight:normal !important;}
-#home-01,#home-02{width:100%;max-width:1200px;margin:0 auto;background-color:#333;}
+#home-01,#home-02{width:100%;margin:0 auto;background-color:#333;}
 #home-01{position:relative;height:640px;background-position:center center;background-size:cover;}
 #home-02{background:#399dc8 url("../images/bg-grid.png") no-repeat center top;text-align:center;border-top:1px solid #1f556d;padding:20px;}
 #home-02,#home-02 a{color:#fff;}
@@ -43,6 +43,10 @@
 /*LOCAL OVERRIDES*/
 footer{margin-top:0;}
 /* RWD */
+@media (min-width: 1200px)
+{
+    #dc-search-box fieldset,#browse-by{width:60%;}
+}
 @media (max-width:640px)
 {
     #dc-logo{width:80%;padding-top:50px;}
