--- a/app/views/dams_collections/show.html.erb
+++ b/app/views/dams_collections/show.html.erb
@@ -37,6 +37,7 @@
       <p class="sidebar-header"><b>Collection Tools</b></p>
       <ul class="unstyled sidebar-button-list">
         <li><%= link_to "<i class='icon-plus-sign'></i> View RDF document".html_safe, normalized_rdf_path(@document['id']), class: 'btn btn-link' %>
+        <li><%= link_to "<i class='icon-plus-sign'></i> View Data".html_safe, data_view_dams_collections_path(@document['id']), class: 'btn btn-link' %>
         <li><%= link_to "<i class='icon-plus-sign'></i> Edit collection".html_safe, send(@edit,@document['id']), class: "btn btn-link"%>
       </ul>
     <% end %>
