--- a/app/views/dams_objects/show.html.erb
+++ b/app/views/dams_objects/show.html.erb
@@ -42,6 +42,7 @@
 		    <p class="sidebar-header"><strong>Editor Tools</strong></p>
 		    <ul class="unstyled sidebar-button-list">
 		      <li><%= link_to "<i class='icon-plus-sign'></i> RDF View".html_safe, normalized_rdf_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
+		      <li><%= link_to "<i class='icon-plus-sign'></i> Data View".html_safe, data_view_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
 		      <li><%= link_to "<i class='icon-plus-sign'></i> Edit".html_safe, edit_dams_object_path(@document['id']), class: "btn btn-block btn-small btn-link"%>
 		    </ul>
             <p><strong>Add File</strong></p>
