--- a/app/views/dams_provenance_collection_parts/show.html.erb
+++ b/app/views/dams_provenance_collection_parts/show.html.erb
@@ -17,6 +17,7 @@
 		<% if can? :update, @dams_provenance_collection_part then %>
 					<%= link_to "Edit", edit_dams_provenance_collection_part_path(@dams_provenance_collection_part), class: "btn btn-primary"%>
 					<%= link_to "RDF View", normalized_rdf_path(@dams_provenance_collection_part.id), class: "btn btn-primary"%>
+					<%= link_to "Data View", data_view_dams_collections_path(@dams_provenance_collection_part.id), class: "btn btn-primary"%>
 		<% end %>
 	</div>
 </div>
