Updating the titles to show the nonSort text. DHH-387

--- a/app/views/shared/fields/_title.html.erb
+++ b/app/views/shared/fields/_title.html.erb
@@ -8,7 +8,7 @@
 	<hgroup>
 	<% fieldData.each do |datum| %>
 		<% title = JSON.parse(datum) %>
-		<h1><%= title['value'].gsub('""', '"') %></h1>
+		<h1><%= title['nonSort']%> <%= title['value'].gsub('""', '"') %></h1>
 		<% if title['subtitle'] != [] %>
 			<h2><%= title['subtitle'].gsub('""', '"') %></h2>
 		<% end %>
